--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -24,11 +24,58 @@
   },
   "textReplacement": {
     "title": "Обработка текста",
-    "description": "Автоматически заменяет текстовые шаблоны в транскрипции и управляет пробелами на границах вывода.",
+    "description": "Автоматически заменяет текстовые шаблоны в транскрипции. Полезно для исправления часто неверно распознанных слов и единообразного форматирования.",
+    "enable": "Включить замену текста",
+    "enableDescription": "Применять правила замены ко всем транскрипциям после обработки.",
     "cleanupTitle": "Очистка речи",
     "cleanupDescription": "Автоматическое удаление артефактов речи из итогового текста.",
     "beforeLlm": "Применять перед постобработкой LLM",
     "beforeLlmDescription": "Если включено, замена текста применяется ДО обработки LLM. Это предотвращает изменение LLM ваших шаблонов замены.",
+    "helpTitle": "Как использовать специальные символы",
+    "escapeSequences": "Экранированные последовательности",
+    "escapeIntro": "Используйте эти коды, чтобы искать или вставлять специальные символы:",
+    "escapeNewline": "Перевод строки (LF - стиль Unix/Mac)",
+    "escapeCRLF": "Перевод строки (CRLF - стиль Windows)",
+    "escapeCarriageReturn": "Возврат каретки (CR - старый стиль Mac)",
+    "escapeTab": "Символ табуляции",
+    "escapeBackslash": "Символ обратной косой черты",
+    "escapeUnicode": "Unicode-символ (например, \\u{200D} для Zero Width Joiner)",
+    "optionsTitle": "Параметры",
+    "caseSensitiveTitle": "Учет регистра",
+    "caseSensitiveDesc": "Если включено, 'Hello' и 'hello' считаются разными. Если выключено, совпадут оба варианта.",
+    "caseSensitiveTooltip": "Переключить учет регистра",
+    "caseSensitiveShort": "Aa",
+    "regexTitle": "Регулярное выражение",
+    "regexDesc": "Включите, чтобы использовать regex-шаблоны для расширенного сопоставления. Используйте $1, $2 в замене для групп захвата.",
+    "regexTooltip": "Переключить режим regex",
+    "regexShort": ".*",
+    "examples": "Примеры",
+    "exampleTypo": "(исправить опечатку)",
+    "exampleParagraph": "(двойной интервал после точек)",
+    "exampleRegex": "(удалить повторяющиеся слова)",
+    "noteTitle": "Примечание:",
+    "noteContent": "Для преобразования окончаний строк Windows используйте опцию 'Convert LF to CRLF' в расширенных настройках - она делает это автоматически при вставке через буфер обмена.",
+    "fromPlaceholder": "Найти текст...",
+    "toPlaceholder": "Заменить на...",
+    "emptyValue": "(пусто)",
+    "delete": "Удалить правило",
+    "save": "Сохранить",
+    "cancel": "Отмена",
+    "clickToEdit": "Нажмите для редактирования",
+    "empty": "Правил замены пока нет. Добавьте правило выше, чтобы начать.",
+    "fuzzyWordCorrectionTitle": "Нечеткая коррекция слов",
+    "fuzzyWordCorrectionDescription": "Добавьте слова, которые часто распознаются неверно (имена, технические термины). Система автоматически исправит похожие по звучанию слова.",
+    "fuzzyHowItWorksTitle": "Как работает нечеткая коррекция",
+    "fuzzyHowItWorksIntro": "Этот алгоритм исправляет неверно распознанные слова, сравнивая их с вашим списком двумя методами:",
+    "fuzzySoundsLikeTitle": "Похоже по звучанию (фонетика):",
+    "fuzzySoundsLikeDescription": "Определяет, что \"edge\" и \"etch\" звучат похоже.",
+    "fuzzyLooksLikeTitle": "Похоже по написанию (Levenshtein):",
+    "fuzzyLooksLikeDescription": "Ловит опечатки вроде \"srart\" вместо \"start\".",
+    "fuzzyTip": "Совет: если коррекция срабатывает слишком агрессивно, уменьшите чувствительность ниже.",
+    "multiWordMatchingLabel": "Включить сопоставление нескольких слов (N-граммы)",
+    "multiWordMatchingDescription": "Сопоставляет до 3 произнесённых токенов как один пользовательский термин (пример: 'Chat G P T' -> 'ChatGPT'). Отключите, если коррекции слишком агрессивные.",
+    "correctionSensitivityLabel": "Чувствительность коррекции",
+    "correctionSensitivityDescription": "Порог нечеткого совпадения (0.0 = только точные совпадения, 1.0 = принимать любое). Значение по умолчанию 0.18 означает, что слово должно быть примерно на 82% похоже, чтобы исправиться.",
     "outputWhitespaceTitle": "Пробелы в выводе",
     "outputWhitespaceDescription": "Настройка нормализации начальных и конечных пробелов в финальном тексте транскрипции.",
     "outputWhitespaceLeadingRemoveLabel": "Убирать начальный пробел, если провайдер его вернул",
@@ -69,7 +116,14 @@
     "decapitalizeAfterEditExample1": "Вы надиктовали: This is knight.",
     "decapitalizeAfterEditExample2": "Удаляете последнее слово клавишей Backspace.",
     "decapitalizeAfterEditExample3": "Диктуете снова: night.",
-    "decapitalizeAfterEditExample4": "Результат: This is night. (а не This is Night.)"
+    "decapitalizeAfterEditExample4": "Результат: This is night. (а не This is Night.)",
+    "sonioxRealtimeChunkTitle": "Чанки Soniox Realtime",
+    "sonioxRealtimeChunkDescription": "Управляет тем, как текст live-чанков Soniox корректируется перед вставкой. По умолчанию обе опции выключены.",
+    "sonioxRealtimeChunkFuzzyLabel": "Включить нечеткую коррекцию слов для live-чанков Soniox",
+    "sonioxRealtimeChunkFuzzyDescription": "Использует устойчивое к опечаткам сопоставление из Custom Words для каждого live-чанка. Если выключено, нечеткая коррекция пропускается, но обычные правила замены текста продолжают работать.",
+    "sonioxRealtimeChunkSafetyBufferLabel": "Сохранять safety-буфер для межчанкового сопоставления",
+    "sonioxRealtimeChunkSafetyBufferDescription": "Кратковременно хранит последние 2-3 слова, чтобы нечеткая коррекция срабатывала на границах чанков. Этот буфер используется только когда нечеткая коррекция включена.",
+    "sonioxRealtimeChunkBehaviorGuide": "Для максимально быстрого появления текста оставьте обе опции выключенными. Включайте обе только если нужна более точная межчанковая нечеткая коррекция."
   },
   "audioProcessing": {
     "title": "Обработка аудио",
@@ -538,6 +592,127 @@
         "cancel": "Отмена",
         "selectToEdit": "Выберите приглашение выше, чтобы просмотреть и изменить его сведения.",
         "createFirst": "Нажмите «Создать новое приглашение» выше, чтобы создать первое приглашение для постобработки."
+      }
+    },
+    "aiReplace": {
+      "help": {
+        "title": "Об AI Replace",
+        "description": "Выделите текст, произнесите инструкцию и дайте LLM преобразовать текст. Если текст не выделен, будет сгенерирован новый контент по инструкции.",
+        "step1": "Редактируйте, переформулируйте или переводите текст в любом приложении естественным языком.",
+        "step2": "Нажмите хоткей и произнесите инструкцию (например: \"переведи на французский\").",
+        "step3": "AI заменит выделенный текст преобразованным результатом.",
+        "configRequiredTitle": "Требуется настройка",
+        "configRequiredBody": "Для этой функции нужно активное LLM API-подключение. Локальные speech-модели выполняют только распознавание речи. Настройте API-ключ в разделе API Configuration внизу этой страницы.",
+        "proTipTitle": "Совет: генерация нового текста",
+        "proTipBody": "Если текст не выделен, можно попросить AI написать новый текст с нуля."
+      },
+      "shortcuts": {
+        "title": "Сочетание клавиш"
+      },
+      "api": {
+        "title": "AI Replace (выделение текста)",
+        "description": "Настройка LLM для AI Replace. Можно использовать отдельные параметры или те же, что в постобработке.",
+        "sameAsPostProcessing": "Использовать те же настройки, что и у постобработки транскрипции",
+        "sameAsPostProcessingOption": "Как в постобработке",
+        "differentSettings": "Использовать отдельные настройки для AI Replace",
+        "usingPostProcessingModel": "Используется модель постобработки: {{model}}"
+      },
+      "noSelection": {
+        "title": "Режим без выделения",
+        "description": "Когда текст не выделен, AI может сгенерировать новый текст по голосовой инструкции.",
+        "allowToggle": {
+          "label": "Разрешить без выделения",
+          "description": "Генерировать новый текст только по голосу, без предварительного выделения."
+        },
+        "systemPrompt": {
+          "title": "System Prompt (без выделения)",
+          "description": "System prompt, используемый при генерации текста с нуля.",
+          "variables": "Доступные переменные: ${instruction} (ваш голос), ${current_app}, ${language}, ${profile_name}, ${time_local}, ${date_iso}, ${short_prev_transcript}"
+        },
+        "userPrompt": {
+          "title": "User Prompt (без выделения)",
+          "description": "Тело сообщения, отправляемого в AI, когда текст не выделен."
+        }
+      },
+      "quickTap": {
+        "title": "Режим Quick Tap",
+        "description": "Когда вы нажимаете хоткей без речи.",
+        "allowQuickTap": {
+          "label": "Разрешить Quick Tap",
+          "description": "Разрешает отправку без речи. Быстро нажмите хоткей и ничего не говорите, чтобы автоматически улучшить/исправить выделенный текст."
+        },
+        "systemPrompt": {
+          "title": "System Prompt (Quick Tap)",
+          "description": "System prompt, используемый при быстром нажатии без речи (например: \"Исправь грамматику\")."
+        },
+        "userPrompt": {
+          "title": "User Prompt (Quick Tap)",
+          "description": "Тело сообщения, отправляемого в AI в режиме quick-tap."
+        },
+        "threshold": {
+          "title": "Порог Quick Tap",
+          "description": "Максимальная длительность, чтобы нажатие считалось Quick Tap.",
+          "suffix": "мс"
+        }
+      },
+      "promptHelp": {
+        "toggleLabel": "Переменные и примеры",
+        "exampleLabel": "Пример шаблона:",
+        "modeNotes": {
+          "noSelection": "Режим без выделения: AI генерирует только по ${instruction}; ${output}/${selection} пустые.",
+          "quickTap": "Режим quick-tap: ${instruction} всегда пустая.",
+          "withSelection": "Режим с выделением: используйте и ${instruction}, и ${output}/${selection}."
+        },
+        "variables": {
+          "instruction": "Ваши произнесенные слова (распознанная речь)",
+          "output": "Выделенный текст (пусто, если ничего не выделено)",
+          "selection": "То же, что ${output}",
+          "currentApp": "Заголовок активного окна (например, Notepad, VS Code)",
+          "language": "Код языка транскрипции (например, en, fr, de)",
+          "profileName": "Имя активного профиля транскрипции",
+          "timeLocal": "Локальные дата/время (например: среда, 19 фев 2026, 15:45)",
+          "dateIso": "Дата ISO 8601 (например: 2026-02-19T15:45:00+05:00)",
+          "shortPrevTranscript": "Последняя предыдущая транскрипция в том же приложении"
+        },
+        "examples": {
+          "noSelection": "INSTRUCTION:\n${instruction}",
+          "quickTap": "TEXT:\n${output}",
+          "withSelection": "INSTRUCTION:\n${instruction}\n\nTEXT:\n${output}"
+        },
+        "tooltips": {
+          "systemPrompt": {
+            "noSelection": "Отправляется первым как system message. Используйте для стабильных правил: тон, формат вывода и жесткие ограничения. Режим без выделения: задает логику чистой генерации текста.",
+            "quickTap": "Отправляется первым как system message. Используйте для стабильных правил: тон, формат вывода и жесткие ограничения. Режим quick-tap: управляет переписыванием, когда голосовой инструкции нет.",
+            "withSelection": "Отправляется первым как system message. Используйте для стабильных правил: тон, формат вывода и жесткие ограничения. Режим с выделением: определяет, как преобразуется выделенный текст."
+          },
+          "userPrompt": {
+            "noSelection": "Отправляется вторым как user message после подстановки переменных. Это динамический шаблон запроса. Режим без выделения: обычно используется ${instruction}; ${output}/${selection} пустые.",
+            "quickTap": "Отправляется вторым как user message после подстановки переменных. Это динамический шаблон запроса. Режим quick-tap: ${instruction} пустая, поэтому опирайтесь на ${output}/${selection}.",
+            "withSelection": "Отправляется вторым как user message после подстановки переменных. Это динамический шаблон запроса. Режим с выделением: объединяйте ${instruction} (что сделать) и ${output}/${selection} (что редактировать)."
+          }
+        }
+      },
+      "withSelection": {
+        "title": "Режим с выделением",
+        "description": "Настройка того, как AI обрабатывает выделенный текст с голосовой инструкцией.",
+        "systemPrompt": {
+          "title": "System Prompt",
+          "description": "System prompt, который направляет AI к результату, готовому к вставке."
+        },
+        "userPrompt": {
+          "title": "Шаблон User Prompt",
+          "description": "Как голос + выделенный текст отправляются в AI. Измените для настройки формата."
+        },
+        "variables": "Доступные переменные: ${instruction} (ваш голос), ${output} (выделенный текст)",
+        "maxChars": {
+          "title": "Максимум символов",
+          "description": "Ограничение размера выделения, чтобы избежать высоких затрат API. Если превышено, обработка пропускается.",
+          "suffix": "символов"
+        },
+        "restoreOnError": {
+          "label": "Пытаться восстановить при ошибке",
+          "description": "Best-effort: если AI Replace завершился ошибкой или был отменен после вырезания выделения, попытаться вставить исходный текст обратно."
+        }
       }
     },
     "history": {
