--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -122,7 +122,7 @@
     "sonioxRealtimeChunkFuzzyLabel": "Включить нечеткую коррекцию слов для live-чанков Soniox",
     "sonioxRealtimeChunkFuzzyDescription": "Использует устойчивое к опечаткам сопоставление из Custom Words для каждого live-чанка. Если выключено, нечеткая коррекция пропускается, но обычные правила замены текста продолжают работать.",
     "sonioxRealtimeChunkSafetyBufferLabel": "Сохранять safety-буфер для межчанкового сопоставления",
-    "sonioxRealtimeChunkSafetyBufferDescription": "Кратковременно хранит последние 2-3 слова, чтобы нечеткая коррекция срабатывала на границах чанков. Этот буфер используется только когда нечеткая коррекция включена.",
+    "sonioxRealtimeChunkSafetyBufferDescription": "Кратковременно хранит последние ~3 слова, чтобы нечеткая коррекция срабатывала на границах чанков. Этот буфер используется только когда нечеткая коррекция включена. Он задерживает вставку примерно на эти 3 слова, поэтому live-вывод может ощущаться немного медленнее (часто это почти незаметно).",
     "sonioxRealtimeChunkBehaviorGuide": "Для максимально быстрого появления текста оставьте обе опции выключенными. Включайте обе только если нужна более точная межчанковая нечеткая коррекция."
   },
   "audioProcessing": {
