--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -313,6 +313,15 @@
     },
     "advanced": {
       "title": "Продвинутые",
+      "autoStop": {
+        "title": "Безопасность: Авто-остановка записи",
+        "description": "Автоматически останавливает слишком долгую запись. Важная функция безопасности, чтобы случайно не исчерпать бюджет облачного API, если вы забыли выключить микрофон.",
+        "timeoutTitle": "Остановить через",
+        "timeoutDescription": "Время в секундах до автоматической остановки активной записи.",
+        "seconds": "секунд",
+        "pasteTitle": "Вставить текст",
+        "pasteDescription": "Если выключено, транскрипция отменится без вставки текста."
+      },
       "startHidden": {
         "label": "Запускать скрыто",
         "description": "Запускать в системный трей, не открывая окно."
