--- a/src/i18n/locales/cs/translation.json
+++ b/src/i18n/locales/cs/translation.json
@@ -228,7 +228,8 @@
         "description": "Přidejte slova, která jsou při přepisu často špatně rozpoznána nebo napsána. Systém automaticky opraví podobně znějící slova podle vašeho seznamu.",
         "placeholder": "Přidat slovo",
         "add": "Přidat",
-        "remove": "Odebrat {{word}}"
+        "remove": "Odebrat {{word}}",
+        "duplicate": "\"{{word}}\" již existuje"
       }
     },
     "postProcessing": {
@@ -450,4 +451,3 @@
     "transcribing": "Přepisuji..."
   }
 }
-
