--- a/src/i18n/locales/pt/translation.json
+++ b/src/i18n/locales/pt/translation.json
@@ -228,7 +228,8 @@
         "description": "Adicione palavras que são frequentemente mal ouvidas ou mal escritas durante a transcrição. O sistema irá automaticamente corrigir palavras semelhantes para corresponder à sua lista.",
         "placeholder": "Adicionar uma palavra",
         "add": "Adicionar",
-        "remove": "Remover {{word}}"
+        "remove": "Remover {{word}}",
+        "duplicate": "\"{{word}}\" já existe"
       }
     },
     "postProcessing": {
@@ -450,4 +451,3 @@
     "transcribing": "Transcrevendo..."
   }
 }
-
