--- a/src/i18n/locales/vi/translation.json
+++ b/src/i18n/locales/vi/translation.json
@@ -229,7 +229,8 @@
         "description": "Thêm các từ thường bị nghe nhầm hoặc viết sai trong quá trình chuyển đổi. Hệ thống sẽ tự động sửa các từ có âm thanh tương tự để khớp với danh sách của bạn.",
         "placeholder": "Thêm một từ",
         "add": "Thêm",
-        "remove": "Xóa {{word}}"
+        "remove": "Xóa {{word}}",
+        "duplicate": "\"{{word}}\" đã tồn tại"
       }
     },
     "postProcessing": {
@@ -451,4 +452,3 @@
     "transcribing": "Đang chuyển đổi..."
   }
 }
-
