userdoc: where my settings are?

--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -742,6 +742,8 @@
         "title": "Каталог журналов",
         "description": "Место хранения файлов журналов"
       },
+      "settingsDirectoryTitle": "Папка с настройками",
+      "settingsDirectoryDescription": "Ваши настройки хранятся в этой папке в файле settings_store.json. Вы можете скопировать его, чтобы перенести настройки на новый компьютер.",
       "logLevel": {
         "title": "Уровень журнала",
         "description": "Установите уровень детализации журнала"
